vlib/v/checker/tests/fixed_array_non_const_size_err.vv
fn main() {
	size := 2

	array := [size]int{}

	println(array)
}
